[tool.poetry]
name = "mri"
version = "0.1.0"
description = "A Python project for MRI analysis"
authors = ["gitchog <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21"
scipy = "^1.7"
pandas = "^1.3"
pydantic = "^1.8"
h5py = "^3.6"
pyyaml = "^5.4"
matplotlib = "^3.5"
pyvista = "^0.31"
typer = "^0.4"
pytest = "^6.2"
rich = "^10.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"